# dinner-bell

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
deploy/: deployment.yaml  role.yaml  role_binding.yaml  serviceaccount.yaml
lib/: kube_utils.py  notifiers.py  run.py
